--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
     </form>
 
     <div class="error url-already-exists">
-      <%= error %>
+      <%= (error) ? error : '' %>
     </div>
 
     <table class="table table-striped table-responsive-md table-hover">
